[gd_scene load_steps=6 format=2]

[ext_resource path="res://recursos/tileSets/BlocosTemporarios.tres" type="TileSet" id=1]
[ext_resource path="res://cenas/jogador/ComponenteJogador.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/estagios/littleGoth/TesteLittleGothParte1.gd" type="Script" id=3]
[ext_resource path="res://recursos/tileSets/BlocosTemporariosCartesianos.tres" type="TileSet" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 105.5 )

[node name="Cena" type="Node2D"]
script = ExtResource( 3 )

[node name="Jogadores" type="Node2D" parent="."]
position = Vector2( 96, 104 )

[node name="Player1" parent="Jogadores" instance=ExtResource( 2 )]
posicaoInicial = Vector2( 96, 104 )
velocidadePadrao = 90
forcaPulo = 400

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 529, 206 )
current = true

[node name="Terreno" type="Node2D" parent="."]

[node name="Y0" type="Node2D" parent="Terreno"]
z_index = -1

[node name="BlocosIsometricos" type="TileMap" parent="Terreno/Y0"]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( 65541, 28, 0, 65542, 28, 0, 131077, 28, 0, 131078, 28, 0, 131079, 46, 0, 131080, 28, 0, 131081, 28, 0, 131082, 28, 0, 131083, 46, 0, 131084, 46, 0, 131085, 46, 0, 131086, 46, 0, 131087, 28, 0, 131088, 28, 0, 131089, 28, 0, 131090, 28, 0, 196613, 28, 0, 196614, 28, 0 )

[node name="BlocosCartesianos" type="TileMap" parent="Terreno/Y0"]
position = Vector2( 0, -2.629 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 17 )
format = 1

[node name="Y2" type="Node2D" parent="Terreno"]
z_index = 1000

[node name="BlocosIsometricos" type="TileMap" parent="Terreno/Y2"]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( -983021, 28, 0, -917485, 28, 0, -851949, 28, 0, -786413, 28, 0, -720877, 28, 0, -655341, 47, 0, -589805, 28, 0, -524269, 28, 0, -458733, 28, 0, -393197, 28, 0, -327661, 47, 0, -262125, 47, 0, -196589, 28, 0, -131053, 47, 0, -65517, 47, 0, 19, 47, 0, 65555, 28, 0, 131079, 46, 0, 131080, 28, 0, 131081, 28, 0, 131082, 28, 0, 131083, 46, 0, 131084, 46, 0, 131085, 46, 0, 131086, 46, 0, 131087, 28, 0, 131088, 28, 0, 131089, 28, 0, 131090, 28, 0, 131091, 28, 0 )

[node name="BlocosCartesianos" type="TileMap" parent="Terreno/Y2"]
position = Vector2( 0, -2.629 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 17 )
format = 1

[node name="Gatilhos" type="Node2D" parent="."]
z_index = 4096

[node name="Terreno" type="Node2D" parent="Gatilhos"]
visible = false

[node name="Queda" type="Area2D" parent="Gatilhos/Terreno"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Queda"]
polygon = PoolVector2Array( 129, 91, 199, 126, 219, 129, 128, 80 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Queda"]
position = Vector2( 251, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( 122, 91, 233, 144, 253, 143, 123, 80 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Queda"]
position = Vector2( 83, -45 )
polygon = PoolVector2Array( 90, 189, 119, 175, 136, 176, 107, 195 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Queda"]
position = Vector2( 0.300003, -66.7 )
polygon = PoolVector2Array( 195.7, 217.7, 199.7, 213.7, 545, 384, 544, 395 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Queda"]
position = Vector2( 0.300003, -66.7 )
polygon = PoolVector2Array( 545, 384, 545, 396, 1079.7, 125.7, 1066.7, 119.7 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Queda"]
polygon = PoolVector2Array( 134, 185, 146, 180, 545, 384, 544, 395 )

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Queda"]
polygon = PoolVector2Array( 545, 384, 545, 396, 1135, 88, 1126, 85 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Queda"]
polygon = PoolVector2Array( 19, 147, 94, 183, 125, 168, 141, 178, 89, 198, -3, 147 )

[node name="Chao" type="Area2D" parent="Gatilhos/Terreno"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Chao"]
polygon = PoolVector2Array( 96, 176, 192, 129, 128, 97, 32, 144 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Chao"]
polygon = PoolVector2Array( 129, 160, 159, 145, 576, 352, 545, 367 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Chao"]
position = Vector2( 420, 494 )
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( 126, 158, 156, 143, 699, 415, 668, 429 )

[node name="Y0" type="Area2D" parent="Gatilhos/Terreno"]
z_index = 1000
collision_layer = 0
collision_mask = 8

[node name="Atras" type="Area2D" parent="Gatilhos/Terreno/Y0"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y0/Atras"]
polygon = PoolVector2Array( 129, 91, 199, 126, 219, 129, 128, 80 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y0/Atras"]
position = Vector2( 251, 0 )
scale = Vector2( -1, 1 )
polygon = PoolVector2Array( 122, 91, 233, 144, 253, 143, 123, 80 )

[node name="Frente" type="Area2D" parent="Gatilhos/Terreno/Y0"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y0/Frente"]
position = Vector2( 83, -45 )
polygon = PoolVector2Array( 93, 189, 119, 175, 136, 176, 108, 196 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y0"]
polygon = PoolVector2Array( 96, 176, 123, 162, 115, 156, 150, 137, 163, 143, 192, 129, 128, 97, 32, 144 )

[node name="Y2" type="Area2D" parent="Gatilhos/Terreno"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y2"]
polygon = PoolVector2Array( 122, 156, 151, 141, 576, 352, 545, 367 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y2"]
position = Vector2( 420, 494 )
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( 126, 158, 156, 143, 699, 415, 668, 429 )

[node name="Atras" type="Area2D" parent="Gatilhos/Terreno/Y2"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y2/Atras"]
position = Vector2( 0.300003, -66.7 )
polygon = PoolVector2Array( 194.7, 217.7, 200.7, 213.7, 545, 384, 544, 395 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y2/Atras"]
position = Vector2( 0.300003, -66.7 )
polygon = PoolVector2Array( 545, 384, 545, 396, 1079.7, 125.7, 1066.7, 119.7 )

[node name="Frente" type="Area2D" parent="Gatilhos/Terreno/Y2"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y2/Frente"]
polygon = PoolVector2Array( 19, 147, 94, 183, 125, 168, 141, 178, 89, 198, -3, 147 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y2/Frente"]
polygon = PoolVector2Array( 134, 185, 146, 180, 545, 384, 544, 395 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Terreno/Y2/Frente"]
polygon = PoolVector2Array( 545, 384, 545, 396, 1135, 88, 1126, 85 )

[node name="Estagio" type="Node2D" parent="Gatilhos"]

[node name="Respawn" type="Area2D" parent="Gatilhos/Estagio"]
position = Vector2( 0, 1500 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gatilhos/Estagio/Respawn"]
scale = Vector2( 10000, 1 )
shape = SubResource( 1 )

[node name="MudarEstagio" type="Area2D" parent="Gatilhos/Estagio"]
position = Vector2( 819, 209 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Gatilhos/Estagio/MudarEstagio"]
position = Vector2( -14, 1 )
polygon = PoolVector2Array( -59, -8, 57, 53, 154, 3, 36, -55 )

[node name="Audio" type="Node2D" parent="Gatilhos"]

[node name="Parte1" type="Node2D" parent="Gatilhos/Audio"]

[node name="PianoA5" type="Area2D" parent="Gatilhos/Audio/Parte1"]
position = Vector2( 0, 1 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoA5"]
polygon = PoolVector2Array( 129, 159, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoA5"]
position = Vector2( 129, 64 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoE5" type="Area2D" parent="Gatilhos/Audio/Parte1"]
position = Vector2( 162, 81 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoE5"]
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoB5" type="Area2D" parent="Gatilhos/Audio/Parte1"]
position = Vector2( 193, 96 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoB5"]
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoB5"]
position = Vector2( 574, -96 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoC6" type="Area2D" parent="Gatilhos/Audio/Parte1"]
position = Vector2( 226, 113 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoC6"]
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoC6"]
position = Vector2( 222.2, 46.6 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoC6"]
position = Vector2( 380.2, -33.4 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoD6" type="Area2D" parent="Gatilhos/Audio/Parte1"]
position = Vector2( 512, 64 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoD6"]
position = Vector2( -32.8, 79.6 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoD6"]
position = Vector2( 65.2, 31.6 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoE6" type="Area2D" parent="Gatilhos/Audio/Parte1"]
position = Vector2( 577, 33 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte1/PianoE6"]
position = Vector2( -63.8, 94.6 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="Parte2" type="Node2D" parent="Gatilhos/Audio"]
position = Vector2( 0, 200 )

[node name="PianoA5" type="Area2D" parent="Gatilhos/Audio/Parte2"]
position = Vector2( 0, 1 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoA5"]
polygon = PoolVector2Array( 129, 159, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoA5"]
position = Vector2( 129, 64 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoB6" type="Area2D" parent="Gatilhos/Audio/Parte2"]
position = Vector2( 193, 96 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoB6"]
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoB6"]
position = Vector2( 574, -96 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoE5" type="Area2D" parent="Gatilhos/Audio/Parte2"]
position = Vector2( 162, 81 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoE5"]
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoC6" type="Area2D" parent="Gatilhos/Audio/Parte2"]
position = Vector2( 226, 113 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoC6"]
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoC6"]
position = Vector2( 222.2, 46.6 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoC6"]
position = Vector2( 380.2, -33.4 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoD6" type="Area2D" parent="Gatilhos/Audio/Parte2"]
position = Vector2( 512, 64 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoD6"]
position = Vector2( -32.8, 79.6 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoD6"]
position = Vector2( 65.2, 31.6 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[node name="PianoDSH6" type="Area2D" parent="Gatilhos/Audio/Parte2"]
position = Vector2( 577, 33 )
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Gatilhos/Audio/Parte2/PianoDSH6"]
position = Vector2( -63.8, 94.6 )
polygon = PoolVector2Array( 129, 160, 160, 176, 193, 160, 160, 144 )

[connection signal="body_entered" from="Gatilhos/Terreno/Queda" to="." method="mudarPosicaoChao" binds= [ Vector2( 0, 3000 ) ]]
[connection signal="body_entered" from="Gatilhos/Terreno/Chao" to="." method="mudarPosicaoChao" binds= [ Vector2( 0, 0 ) ]]
[connection signal="body_entered" from="Gatilhos/Terreno/Y0" to="." method="mudarCoeficienteZ" binds= [ 0 ]]
[connection signal="body_entered" from="Gatilhos/Terreno/Y0/Atras" to="." method="mudarCoeficienteZ" binds= [ -1 ]]
[connection signal="body_entered" from="Gatilhos/Terreno/Y0/Frente" to="." method="mudarCoeficienteZ" binds= [ 1.0 ]]
[connection signal="body_entered" from="Gatilhos/Terreno/Y2" to="." method="mudarCoeficienteZ" binds= [ 2.0 ]]
[connection signal="body_entered" from="Gatilhos/Terreno/Y2/Atras" to="." method="mudarCoeficienteZ" binds= [ 1.0 ]]
[connection signal="body_entered" from="Gatilhos/Terreno/Y2/Frente" to="." method="mudarCoeficienteZ" binds= [ 3.0 ]]
[connection signal="body_entered" from="Gatilhos/Estagio/Respawn" to="." method="respawnar" binds= [ Vector2( 96, 104 ), Vector2( 0, 0 ) ]]
[connection signal="body_entered" from="Gatilhos/Estagio/MudarEstagio" to="." method="_on_MudarEstagio_body_entered"]
[connection signal="body_entered" from="Gatilhos/Audio/Parte1/PianoA5" to="." method="tocarAudio" binds= [ "piano", "A5" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte1/PianoE5" to="." method="tocarAudio" binds= [ "piano", "E5" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte1/PianoB5" to="." method="tocarAudio" binds= [ "piano", "B5" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte1/PianoC6" to="." method="tocarAudio" binds= [ "piano", "C6" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte1/PianoD6" to="." method="tocarAudio" binds= [ "piano", "D6" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte1/PianoE6" to="." method="tocarAudio" binds= [ "piano", "E6" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte2/PianoA5" to="." method="tocarAudio" binds= [ "piano", "A5" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte2/PianoB6" to="." method="tocarAudio" binds= [ "piano", "B5" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte2/PianoE5" to="." method="tocarAudio" binds= [ "piano", "E5" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte2/PianoC6" to="." method="tocarAudio" binds= [ "piano", "C6" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte2/PianoD6" to="." method="tocarAudio" binds= [ "piano", "D6" ]]
[connection signal="body_entered" from="Gatilhos/Audio/Parte2/PianoDSH6" to="." method="tocarAudio" binds= [ "piano", "DSH6" ]]
